# Win-Spotlight

./: .gitignore  README.md  compress.js  landing.html  package-lock.json  package.json
src/: dialog.js  index.html  main.js  styles.css  ui.js  utils.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  currency.rs  history.rs  index_engine.rs  intent.rs  launcher.rs  main.rs  ranking.rs  search.rs  shell.rs  shortcuts.rs  watcher.rs
src-tauri/src/indexer/: cache.rs  icons.rs  mod.rs  scanner.rs
