[package]
name = "spotlight-win"
version = "0.4.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "spotlight_win_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
walkdir = "2"
fuzzy-matcher = "0.3"
tauri-plugin-global-shortcut = "2"
windows-icons = "0.2.1"
lnk = "0.6"
encoding_rs = "0.8"
tauri-plugin-autostart = "2"
directories = "5"
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_UI_WindowsAndMessaging", "Win32_UI_Shell"] }
tantivy = "0.22.0"
notify = "6.1.1"
chrono = "0.4.44"
crossbeam-channel = "0.5.15"
notify-debouncer-mini = "0.4.1"
urlencoding = "2.1.3"
reqwest = { version = "0.12", features = ["blocking", "json"] }
md5 = "0.8.0"


